Added the rest of functionality

--- a/views/pages/list.ejs
+++ b/views/pages/list.ejs
@@ -8,6 +8,11 @@
 		</header>
 		
 		<main>
+			<a href = "<%= parentPath %>">
+				<div class = "button rounded clickable">
+					&#8592; Select stash
+				</div>
+			</a>
 			<h2>
 				Items @ <%= stash %> (<%= place %>)
 			</h2>
@@ -16,17 +21,17 @@
 				<tr>
 					<th> Amount </th>
 					<th> Name </th>
-					<th> Expiration date </th>
+					<th> Företag </th>
 				</tr>
 				<% items.forEach(function(item){ %>
 					<tr>
 						<td><%= item.amount %> <%= item.unit %></td>
-						<td><%= item.product %> <% if(item.manufacturer){ %>(<%= item.manufacturer %>) <% } %></td>
-						<td>Unknown</td>
+						<td><%= item.product %></td>
+						<td><% if(item.manufacturer){ %><%= item.manufacturer %><% }else{ %>Unknown<% } %></td>
 				<% }); %>
 			</table>
 			
-			<div id = "addEvent">
+			<div id = "addEvent" class = "addwindow high">
 				<% include ../partials/event.ejs %>
 			</div>
 		</main>
