--- a/views/partials/event.ejs
+++ b/views/partials/event.ejs
@@ -43,6 +43,7 @@
 					<option value = "st">st</option>
 					<option value = "kg">kg</option>
 					<option value = "liter">liter</option>
+					<option value = "förp">förpackning</option>
 				</select>
 			</div>
 		</div>
