--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,35 @@
 a{
 	color:#000;
+	text-decoration:none !important;
+}
+header{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:40px;
+	background-color: #f7f7f7;
+	border-bottom:1px solid #e6e6e6;
+	color:#444;
+	
+	padding-left:20px;
+	line-height:40px;
+}
+main{
+	padding:50px 20px 50px 20px;
+}
+footer{
+	position:fixed;
+	bottom:0;
+	left:0;
+	width:100%;
+	height:40px;
+	background-color: #f7f7f7;
+	border-top:1px solid #e6e6e6;
+	color: #444;
+	
+	padding-left:20px;
+	line-height:40px;
 }
 input[type="text"],input[type="number"]{
 	padding:4px 8px;
@@ -26,6 +56,7 @@ input[type=button],input[type=submit]{
 }
 input[type=submit]{
 	background-color:#64ae11;
+	margin-top:5px;
 }
 input[type=button]:disabled,input[type=submit]:disabled{
 	background-color:#a0a0a0;
@@ -98,53 +129,10 @@ label.radiobutton input:disabled + span:hover{
 	background-color:#dddddd;
 	cursor:no-drop;
 }
-
-header{
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height:40px;
-	background-color: #f7f7f7;
-	border-bottom:1px solid #e6e6e6;
-	color:#444;
-	
-	padding-left:20px;
-	line-height:40px;
+label.radiobutton:hover{
+	cursor:hand;
+	cursor:pointer;
 }
-main{
-	padding-top:40px;
-}
-footer{
-	position:fixed;
-	bottom:0;
-	left:0;
-	width:100%;
-	height:40px;
-	background-color: #f7f7f7;
-	border-top:1px solid #e6e6e6;
-	color: #444;
-	
-	padding-left:20px;
-	line-height:40px;
-}
-
-
-#addButton{
-	position:absolute;
-	right:60px;
-	top: 70px;
-	background-color:#64ae11;
-	color:#fff;
-	
-	width:50px;
-	height:50px;
-	font-size:32px;
-	text-align:center;
-	line-height:50px;
-	border-radius:50%;
-}
-
 
 
 div.iconWrapper{
@@ -169,12 +157,42 @@ div.iconWrapper > div.name{
 	transition:all 1s;
 }
 
-#addEvent{
+#addButton{
+	position:absolute;
+	right:160px;
+	top: 70px;
+	width:50px;
+	height:50px;
+	line-height:50px;
+	font-size:32px;
+}
+.button{
+	width:150px;
+	height:30px;
+	line-height:30px;
+	font-size:16px;
+	text-align:center;
+	background-color:#64ae11;
+	color:#fff;
+}
+.button.rounded{
+	border-radius:4px;
+}
+.button.round{
+	border-radius:50%;
+}
+.addwindow{
 	position:fixed;
-	top:100px;
+	top:150px;
 	right:30px;
 	width:300px;
 	height:400px;
+}
+.addwindow.high{
+	top:100px;
+}
+.hiddenwindow{
+	display:none;
 }
 .message{
 	width:250px;
@@ -193,4 +211,7 @@ div.iconWrapper > div.name{
 	background-color:#028002;
 	color:#fff;
 	border-color:#108810;
+}
+.input-group{
+	display:block !important;
 }
