--- a/views/pages/addstash.ejs
+++ b/views/pages/addstash.ejs
@@ -8,6 +8,21 @@
 		</header>
 		
 		<main>
+			<% if(messages.error){ %>
+				<div class = "message error">
+					<%= messages.error %>
+				</div>
+			<% } %>
+			<% if(messages.msg){ %>
+				<div class = "message success">
+					<%= messages.msg %>
+				</div>
+			<% } %>
+			<form action = "#" method = "POST" enctype = "multipart/form-data">
+				<input type = "text" name = "name" placeholder = "New stash name">
+				<input type = "file" 
+				<input type = "submit" value = "Add stash">
+			</form>
 		</main>
 		
 		<footer>
