--- a/views/pages/stashes.ejs
+++ b/views/pages/stashes.ejs
@@ -8,11 +8,15 @@
 		</header>
 		
 		<main>
-			<a href = "/places/<%= place %>/add">
-				<div id = "addButton" class = "button round clickable">
-					+
+			<a href = "<%= parentPath %>">
+				<div class = "button rounded clickable">
+					&#8592; Select place
 				</div>
 			</a>
+			<div id = "addButton" class = "button round clickable" onClick = "$('#addStash').toggle();$(this).html($(this).html()=='&#10005;'?'+':'&#10005;');">
+				+
+			</div>
+			
 			<h2>
 				Stashes @ <%= place %>
 			</h2>
@@ -25,6 +29,10 @@
 					</div>
 				</a>
 			<% }); %>
+			
+			<div id = "addStash" class = "addwindow hiddenwindow">
+				<% include ../partials/addstash.ejs %>
+			</div>
 		</main>
 		
 		<footer>
