--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,4 @@
-SkafferiTracker - The best way to track your skafferi!
+<span id = "punchline">SkafferiTracker - The best way to track your skafferi!</span>
+<span id = "searchbar">
+	<input type = "text" class = "small long" name = "search" placeholder = "Search for product, manufacturer etc.">
+</span>
