Quick fix of error messages being hidden

--- a/views/pages/places.ejs
+++ b/views/pages/places.ejs
@@ -2,7 +2,7 @@
 	<head>
 		<% include ../partials/head %>
 	</head>
-	<body>
+	<body <% if(messages.openadd){ %>onload = "$('#addButton').click();"<% } %>>
 		<header>
 			<% include ../partials/header %>
 		</header>
